# chachaslide

./: Dockerfile  chachaslide.py  deployment.yaml  example.py  main.py  pyproject.toml  redis.yaml  requirements.txt  test-app.py
folder/: requirements.txt
