[project]
name = "chachaslide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "emoji>=2.15.0",
    "faker>=40.19.1",
    "fastapi>=0.136.3",
    "flask>=3.1.3",
    "pydantic>=2.13.4",
    "rapidfuzz>=3.14.5",
    "redis>=8.0.0",
    "uvicorn>=0.48.0",
]
